# enterprise

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  =4.0,!=4.0.1,!=4.0.1.post1  AUTHORS.rst  B1855+09.pkl  CONTRIBUTING.rst  HISTORY.rst  Hierarchical.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_rtd.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: .codecov.yml  ISSUE_TEMPLATE.md
.github/workflows/: Install-conda-pulsar-enterprise  Install-conda-pulsar-enterprise.py  ci_test.yml
docs/: Makefile  conf.py  data.rst  enterprise.rst  enterprise.signals.rst  fft.rst  index.rst  index.ru  installation.rst  make.bat  mdc.rst  modules.rst  nano9.rst  nb-rst.tpl  requirements.txt  usage.rst
enterprise/: __init__.py  constants.py  deflate.py  derivative_file.py  enterprise.py  h5format.py  pulsar.QS  pulsar.py  pulsar_inflate.py  utils.py
enterprise/datafiles/: pulsar_distances.json
enterprise/likelihood/: utils.py
tests/: data.ipynb  enterprise_test_data.py  function.ipynb  test_derivative_file.py  test_deterministic_signals.py  test_enterprise.py  test_gp_coefficients.py  test_gp_priors.py  test_gp_signals.py  test_gp_wideband.py  test_h5format.py  test_hierarchical_parameter.py  test_likelihood.py  test_parameter.py  test_prior.py  test_pta.py  test_pulsar.py  test_selections.py  test_set_parameter.py  test_signals.py  test_utils.py  test_vector_parameter.py  test_white_signals.py
(+290 files in other folders)
