[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .enterprise
    | enterprise/src
  )/
)
'''
[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "Cython>=0.22", # need for scikit-sparse
    "numpy>=1.15.0" # need for scikit-sparse
]
build-backend = "setuptools.build_meta"