[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .enterprise
    | enterprise/src
  )/
  | enterprise/version.py
)
'''

[tool.setuptools_scm]
write_to = "enterprise/version.py"

[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"